--- a/index.html
+++ b/index.html
@@ -870,7 +870,7 @@
                         <div class="row">
                             <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3" data-aos="fade-up"
                                 data-aos-duration="1000">
-                                <a href="">
+                                <a href="./Workspace.html">
                                     <div class="card-flyer">
                                         <div class="text-box">
                                             <div class="image-box">
@@ -884,7 +884,7 @@
                                                     ...</p>
 
                                                 <br>
-                                                <a href="" class="read_more_btn"><button>Know More</button></a>
+                                                <a href="./Workspace.html" class="read_more_btn"><button>Know More</button></a>
                                             </div>
                                         </div>
                                     </div>
@@ -892,7 +892,7 @@
                             </div>
                             <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3" data-aos="fade-up"
                                 data-aos-duration="1000">
-                                <a href="">
+                                <a href="./Workspace.html">
                                     <div class="card-flyer">
                                         <div class="text-box">
                                             <div class="image-box">
@@ -907,7 +907,7 @@
                                                     <br> <br>
                                                 </p>
                                                 <div class="w-100">
-                                                    <a href="" class="read_more_btn"><button>Know More</button></a>
+                                                    <a href="./Workspace.html" class="read_more_btn"><button>Know More</button></a>
                                                 </div>
                                             </div>
                                         </div>
@@ -916,7 +916,7 @@
                             </div>
                             <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3" data-aos="fade-up"
                                 data-aos-duration="1000">
-                                <a href="">
+                                <a href="./Workspace.html">
                                     <div class="card-flyer">
                                         <div class="text-box">
                                             <div class="image-box">
@@ -928,7 +928,7 @@
                                                 <p>Now conducting meetings, interviews, conferences and presentations at
                                                     a fully furnished and well equipped meeting room is ...</p>
                                                 <br>
-                                                <a href="" class="read_more_btn"><button>Know More</button></a>
+                                                <a href="./Workspace.html" class="read_more_btn"><button>Know More</button></a>
                                             </div>
                                         </div>
                                     </div>
@@ -936,7 +936,7 @@
                             </div>
                             <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3" data-aos="fade-up"
                                 data-aos-duration="1000">
-                                <a href="">
+                                <a href="./Workspace.html">
                                     <div class="card-flyer">
                                         <div class="text-box">
                                             <div class="image-box">
@@ -948,7 +948,7 @@
                                                     address, mail handling and phone reception for your company while
                                                     you are away ...</p>
                                                 <br>
-                                                <a href="" class="read_more_btn"><button>Know More</button></a>
+                                                <a href="./Workspace.html" class="read_more_btn"><button>Know More</button></a>
                                             </div>
                                         </div>
                                     </div>
